CDPD-50290: Hbase - Upgrade Kerby to 2.0.3 due to CVE-2023-25613
Change-Id: I78c21756a2810e7117b11692bf0710a21e93f215

--- a/hbase-zookeeper/pom.xml
+++ b/hbase-zookeeper/pom.xml
@@ -138,6 +138,11 @@
       <artifactId>reload4j</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
